# vivarium_gates_nutrition_optimization

./: .gitignore  .zenodo.json  CHANGELOG.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.rst  artifact_requirements.txt  environment.sh  pyproject.toml  requirements.txt  setup.py  vivarium_cluster_tools_launcher_wz_rbqg1.sh
.github/: CODEOWNERS
.github/workflows/: build.yml
src/vivarium_gates_nutrition_optimization/: __about__.py  __init__.py  utilities.py
src/vivarium_gates_nutrition_optimization/artifacts/: ethiopia.hdf  nigeria.hdf  pakistan.hdf
src/vivarium_gates_nutrition_optimization/components/: __init__.py  children.py  disease.py  hemoglobin.py  intervention.py  maternal_bmi.py  maternal_disorders.py  morbidity.py  mortality.py  observers.py  population.py  pregnancy.py  transition.py
src/vivarium_gates_nutrition_optimization/constants/: data_keys.py  data_values.py  extra_gbd.py  metadata.py  models.py  paths.py  results.py
src/vivarium_gates_nutrition_optimization/data/: builder.py  extra_gbd.py  loader.py  mean_artifact.ipynb  sampling.py  utilities.py
src/vivarium_gates_nutrition_optimization/model_specifications/: model0.yaml  model_spec.yaml  model_spec_inpatient.yaml  model_spec_sbachmei.yaml  sbachmei_model_spec.yaml
src/vivarium_gates_nutrition_optimization/results_processing/: process_results.py
src/vivarium_gates_nutrition_optimization/tools/: __init__.py  cli.py  make_artifacts.py  make_results.py
tests/: conftest.py
tests/e2e/: test_e2e.py
verification_and_validation/pregnancy_model/: Artifact_vv.ipynb
(+20 files in other folders)
